Created Repo Structure

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,14 @@ build/
 
 # Local env files
 .env
-.env*.local
-.env.development
-.env.test
-.env.production
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# But keep templates!
+!*.env.template
+!*.env.*.template
 
 # Debug logs
 npm-debug.log*
