--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "concurrently \"npm run frontend\" \"npm run backend\""
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
