--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,14 @@ pip-delete-this-directory.txt
 .coverage
 .coverage.*
 .pytest_cache/
+
+
+# Generated content
+downloads/*
+!downloads/.gitkeep
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
