First time using ngrok

--- a/.env.prod.template
+++ b/.env.prod.template
@@ -1,9 +1,11 @@
-# API Keys (fill these in for production)
+# API Keys
 REPLICATE_API_TOKEN=your_replicate_token_here
 ANTHROPIC_API_KEY=your_claude_api_key_here
+NGROK_AUTHTOKEN=your_ngrok_auth_token
 
 # Frontend Configuration
-NEXT_PUBLIC_API_URL=http://your-production-domain:8000
+# This will be automatically updated by the startup script
+NEXT_PUBLIC_API_URL=http://localhost:8000
 
-# Other Configuration
+# Environment
 NODE_ENV=production
