--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,4 +1,3 @@
-# Production compose file
 version: '3.8'
 
 services:
@@ -12,7 +11,6 @@ services:
       - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
-      # Use ARG in Dockerfile to pass these during build
       - REPLICATE_API_TOKEN=${REPLICATE_API_TOKEN}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
     networks:
@@ -28,6 +26,30 @@ services:
       - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
+    depends_on:
+      - backend
+    networks:
+      - visual-whispers-net
+
+  ngrok-frontend:
+    image: ngrok/ngrok:latest
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+    command: "http frontend:3000"
+    ports:
+      - "4040:4040"
+    depends_on:
+      - frontend
+    networks:
+      - visual-whispers-net
+
+  ngrok-backend:
+    image: ngrok/ngrok:latest
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+    command: "http backend:8000"
+    ports:
+      - "4041:4040"
     depends_on:
       - backend
     networks:
