--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Development compose file
 version: '3.8'
 
 services:
@@ -10,14 +9,11 @@ services:
         BUILDKIT_INLINE_CACHE: 1
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend:/app
-      - /app/__pycache__
-      - /app/.pytest_cache
     environment:
       - PYTHONUNBUFFERED=1
-    env_file:
-      - ./backend/.env
+      - REPLICATE_API_TOKEN=${REPLICATE_API_TOKEN}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:3000}
     networks:
       - visual-whispers-net
 
@@ -29,14 +25,32 @@ services:
         BUILDKIT_INLINE_CACHE: 1
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
     environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
-    env_file:
-      - ./frontend/.env.local
+      - BACKEND_URL=${BACKEND_URL:-http://localhost:8000}
+    depends_on:
+      - backend
+    networks:
+      - visual-whispers-net
+
+  ngrok-frontend:
+    image: ngrok/ngrok:latest
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+    command: "http frontend:3000"
+    ports:
+      - "4040:4040"
+    depends_on:
+      - frontend
+    networks:
+      - visual-whispers-net
+
+  ngrok-backend:
+    image: ngrok/ngrok:latest
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+    command: "http backend:8000"
+    ports:
+      - "4041:4040"
     depends_on:
       - backend
     networks:
