Solved Docker API issue

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,10 @@ FROM node:20-slim
 
 WORKDIR /app
 
+# Accept the build arg and set it as an environment variable
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
 # Copy package files
 COPY package*.json ./
 
