--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,21 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slider": "^1.1.2",
+    "lucide-react": "^0.331.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use": "^17.5.0",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "lucide-react": "^0.331.0"
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.3.3"
   }
 }
