--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "visual-whispers",
-  "version": "1.0.0",
+  "private": true,
   "description": "AI-powered image telephone game",
+  "workspaces": [
+    "frontend"
+  ],
   "scripts": {
-    "frontend": "cd frontend && npm run dev",
-    "backend": "cd backend && uvicorn main:app --reload",
-    "dev": "concurrently \"npm run frontend\" \"npm run backend\""
+    "dev": "docker-compose up",
+    "dev:build": "docker-compose up --build",
+    "prod": "docker-compose -f docker-compose-prod.yml up",
+    "prod:build": "docker-compose -f docker-compose-prod.yml up --build",
+    "cleanup": "./cleanup-prod.sh",
+    "frontend": "npm run dev -w frontend",
+    "lint": "npm run lint -w frontend",
+    "type-check": "npm run type-check -w frontend",
+    "test": "npm run test -w frontend"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "concurrently": "^8.2.2",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "npm-run-all": "^4.1.5"
   }
 }
